--- a/Makefile.coq.conf
+++ b/Makefile.coq.conf
@@ -8,7 +8,7 @@
 #                                                                             #
 ###############################################################################
 
-COQMF_VFILES = theories/Preamble.v theories/Preorder.v theories/Poset.v theories/Dcpo.v theories/DcpoExponential.v theories/OrderSpace.v theories/Sierpinski.v theories/Path.v
+COQMF_VFILES = theories/Preamble.v theories/Preorder.v theories/Poset.v theories/Dcpo.v theories/DcpoExponential.v theories/OrderSpace.v theories/Sierpinski.v theories/Path.v theories/Lift.v
 COQMF_MLIFILES = 
 COQMF_MLFILES = 
 COQMF_MLGFILES = 
