--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,8 @@ jobs:
       matrix:
         coq_version:
           - '8.13'
-        ocaml_version: ['4.12.0']
+        ocaml_version:
+          - '4.11-flambda'
       fail-fast: false  # don't stop jobs if one fails
     steps:
       - uses: actions/checkout@v2
