--- a/coq-domains.opam
+++ b/coq-domains.opam
@@ -18,6 +18,8 @@ authors: [
 
 depends: [
   "coq" {>= "8.13.2" & < "8.14~"}
+  "coq-mathcomp-ssreflect" {>= "1.6"}
+  "coq-hierarchy-builder" {>= "1.1.0"}
 ]
 
 build: [
