--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,12 @@ jobs:
           opam_file: 'coq-domains.opam'
           coq_version: ${{ matrix.coq_version }}
           ocaml_version: ${{ matrix.ocaml_version }}
+          script: |
+            startGroup "Build project"
+              opam pin . -y
+              make
+            endGroup
 
-
-      - run: opam pin . -y
-      - run: make
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
