--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,12 @@ jobs:
           opam_file: 'coq-domains.opam'
           coq_version: ${{ matrix.coq_version }}
           ocaml_version: ${{ matrix.ocaml_version }}
+          before_script: |
+            startGroup "Workaround permission issue"
+              sudo chown -R coq:coq .
+            endGroup          
           script: |
             startGroup "Build project"
-              opam pin . -y
               make
             endGroup
 
